# GDSRT-C

./: .gitignore  README.md  guide_java.md  guide_python.md
Java/: .project
Java/src/: module-info.java
Java/src/connection/: Connection.java
Java/src/connector/: GDSRTConnection.java  GDSRTConnector.java
Java/src/dto/: Percentage.java  Problem.java  Trade.java  TradeItem.java  TradeProblem.java  TradeResult.java
Java/src/test/: Main.java  TestCaseOne.java
Java/src/util/: DateStamper.java  EncryptionHelper.java
Python/: encryptionhelper.py  gdsrt.py  main.py  test_case_two.py  trade.py  tradeitem.py
Python/gdsrt/: README.md  pyproject.toml
Python/gdsrt/src/gdsrt_morten_jo/: gdsrt.py
