[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdsrt_morten_jo"
version = "1.0.0"
authors = [
  { name="Morten Joervad", email="morten2094@gmail.com" },
]
description = "Python implementation for gdsrt"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Morten-JO/GDSRT-C"
"Bug Tracker" = "https://github.com/Morten-JO/GDSRT-C/issues"